# RougeGame

./: .gitignore  README.md
SpeakLearnBot/: .pylintrc  Dockerfile  Dockerfile.dev  alembic.ini  main.py  pyproject.toml
SpeakLearnBot/alembic/: env.py
SpeakLearnBot/api/: fake_bot.py  main.py  routes.py  schemas.py
SpeakLearnBot/common/: logging.py
SpeakLearnBot/data/: phonetics_data.py  sing_along_data.py  verb_tense_quiz.py  watch_video_data.py
SpeakLearnBot/database/: __init__.py  base.py  models.py  user_manager.py
SpeakLearnBot/games/: phonetics_menu.py  russian_cases_quiz.py  russian_tutor.py  session_manager.py  sing_along.py  speech_practice_quiz.py  translate_word_quiz.py  translator_game.py  verb_aspect_quiz.py  verb_tense_quiz.py  watch_video.py
SpeakLearnBot/games/game_phonetics/: lesson_phonetics.py  listening_test.py
SpeakLearnBot/handlers/admin/: __init__.py
SpeakLearnBot/handlers/shared/: start.py
SpeakLearnBot/handlers/user/: __init__.py
SpeakLearnBot/keyboards/: language_selection.py  main_menu.py  settings_keyboard.py
SpeakLearnBot/scripts/: check_db_connection.py  download_telegram_files.py  download_telegram_files_user.py  import_from_share.py  init_remote_db.py  seed_data.py
SpeakLearnBot/utils/: bot_helpers.py  file_storage.py
data/: phonetics_listening_test_data.py
docs/: README.md  api-games.md  main-report  main-report.md  variative-report.md
games/: phonetics.py
locales/: ar.json  en.json  es.json  fr.json  vi.json  zh.json
reports/: README.md  Проектная практика отчёт.docx
site/: index.html  script.js
(+67 files in other folders)
