[project]
name = "speaklearnplaybot"
version = "0.1.0"
description = "Adaptive Telegram bot with extensible game system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "python-dotenv>=1.0.0",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "speechrecognition>=3.14.3",
    "pydub>=0.25.1",
    "opuslib>=3.0.1",
    "gigachat>=0.1.42.post2",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.20.0",
    "deep-translator>=1.11.4",
    "gtts>=2.5.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
